--- a/ang-app/src/app/app.component.html
+++ b/ang-app/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header [settings]="settings"></app-header>
-<app-home></app-home>
+<div class="page">
+  <router-outlet></router-outlet>
+</div>
+
