--- a/ang-app/src/app/home/home.component.html
+++ b/ang-app/src/app/home/home.component.html
@@ -1,1 +1,4 @@
+
 <h2>Top photographers</h2>
+<app-photographers-list></app-photographers-list>
+<div class="block-text" [innerHTML]="settings?.site_description"></div>
