--- a/ang-app/src/styles/_settings.scss
+++ b/ang-app/src/styles/_settings.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 /* fonts */
 $opensans_regular: 'open_sansregular', Arial, Helvetica, sans-serif;
 $opensans_bold: 'open_sansbold', Arial, Helvetica, sans-serif;
