--- a/ang-app/src/app/photographers-list/photographer/photo-popup/photo-popup.component.html
+++ b/ang-app/src/app/photographers-list/photographer/photo-popup/photo-popup.component.html
@@ -1,10 +1,11 @@
-<div class="block-photograph-popup">
-  <div class="block-photograph-popup__inner">
+<div *ngIf="popupOpened">
+  <div class="block-photograph-popup" >
     <div class="block-photograph-popup__inner">
-      <h3>aa</h3>
-      <img src="" alt="image">
-      <button class="block-photograph-popup__close"></button>
+      <h3>{{ itemToOpen.photo_title }}</h3>
+      <img src="{{ itemToOpen.photo }}" alt="image">
+      <button class="block-photograph-popup__close" (click)="togglePopup()"></button>
     </div>
   </div>
+  <div class="block-photograph-overlay"></div>
 </div>
-<div class="block-photograph-overlay"></div>
+
