--- a/ang-app/src/app/app.component.scss
+++ b/ang-app/src/app/app.component.scss
@@ -1,5 +1,12 @@
+@import '~styles/settings';
+
 .page {
   max-width: 800px;
+  min-height: 500px;
   margin: 0 auto;
-  padding: 30px 0 0 0;
+  padding: 30px 0 50px 0;
+
+  @include media("<desktop"){
+    padding: 30px 20px 50px 20px;
+  }
 }
