--- a/ang-app/src/app/header/header.component.scss
+++ b/ang-app/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@import '~styles/settings';
+
 header {
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -11,6 +13,10 @@ header {
 
   text-align: center;
   text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
+
+  @include media("<desktop"){
+    padding: 45px 20px;
+  }
 }
 
 h1 {
@@ -19,6 +25,14 @@ h1 {
   font-size: 52px;
   line-height: 120%;
   color: #ffffff;
+
+  @include media("<desktop"){
+    font-size: 32px;
+  }
+
+  a {
+    color: #ffffff;
+  }
 }
 
 p {
@@ -27,4 +41,8 @@ p {
   font-size: 24px;
   line-height: 120%;
   color: #ffffff;
+
+  @include media("<desktop"){
+    font-size: 18px;
+  }
 }
