--- a/ang-app/src/app/photographers-list/photographer/photo-popup/photo-popup.component.scss
+++ b/ang-app/src/app/photographers-list/photographer/photo-popup/photo-popup.component.scss
@@ -6,17 +6,74 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
 }
 
 .block-photograph-popup__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
 
-  .block-photograph-popup__inner {
-    transform: translate(-50%);
-    top: 0;
-    left: 0;
+  img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    margin: 0 auto;
   }
+
+  h3 {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    padding-bottom: 10px;
+    font-family: $opensans_regular;
+    font-size: 22px;
+    line-height: 120%;
+    color: #ffffff;
+
+    text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
+  }
+}
+
+.block-photograph-popup__close {
+  background: #727272;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  right: 25px;
+  top: 12px;
+  width: 43px;
+  height: 43px;
+  cursor: pointer;
+  &:before, &:after {
+    position: absolute;
+    top: 6px;
+    left: 21px;
+    content: ' ';
+    height: 32px;
+    width: 2px;
+    background-color: #ffffff;
+  }
+  &:before {
+    transform: rotate(45deg);
+  }
+  &:after {
+    transform: rotate(-45deg);
+  }
+}
+
+.block-photograph-overlay {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
