--- a/ang-app/src/app/photographers-list/photographer/photographer.component.scss
+++ b/ang-app/src/app/photographers-list/photographer/photographer.component.scss
@@ -9,6 +9,10 @@
   width: 200px;
   margin: 0 25px 10px 0;
 
+  @include media("<desktop"){
+    width: 100px;
+  }
+
   img {
     display: block;
     max-width: 100%;
@@ -58,6 +62,7 @@
     height: auto;
     margin: 0 auto;
     padding-bottom: 5px;
+    cursor: pointer;
   }
 
   p {
