--- a/ang-app/src/app/photographers-list/photographer/photographer.component.scss
+++ b/ang-app/src/app/photographers-list/photographer/photographer.component.scss
@@ -1,6 +1,7 @@
 @import '~styles/settings';
 
 .block-photograph {
+  @include clearfix;
   padding-bottom: 30px;
 }
 
@@ -91,5 +92,44 @@
     font-size: 16px;
     line-height: 120%;
     color: #000000;
+  }
+}
+
+.block-photograph-nav {
+  li {
+    list-style: none;
+  }
+
+  a {
+    border: solid #000000;
+    border-width: 0 3px 3px 0;
+    display: block;
+    position: fixed;
+    top: 50%;
+    width: 10px;
+    height: 10px;
+    padding: 3px;
+  }
+}
+
+.block-photograph-nav__left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+
+  left: 25px;
+
+  @include media("<desktop"){
+    left: 5px;
+  }
+}
+
+.block-photograph-nav__right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+
+  right: 25px;
+
+  @include media("<desktop"){
+    right: 5px;
   }
 }
